--- a/src/Components/eventStyle.css
+++ b/src/Components/eventStyle.css
@@ -14,8 +14,6 @@
 .event-container {
     height: 100vh;
     width: 100vw;
-    position: relative;
-    right: 82px;
     background-color: white;
 }
 
@@ -39,15 +37,34 @@
     font-family: "Poppins", sans-serif;
     font-size: 15px;
     color: rgb(71, 71, 71);
+    font-weight: bold;
 }
 .modal-event-control {
     width: 100%;
     height: 35px;
+    border: 2px solid rgb(225, 225, 225);
+    margin-bottom: 5px;
 }
 .event-max-cat {
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
 }
 .event-categ {
-    width: 250px;
+    width: 230px;
+    height: 35px;
+    border: 2px solid rgb(225, 225, 225);
+}
+.event-studDept {
+    height: 35px;
+    width: 230px;
+    border: 2px solid rgb(225, 225, 225);
+}
+.category-button-event {
+    margin-top: 10px;
+    width: 100%;
+    height: 35px;
+    background-color: #039660;
+    border: none;
+    font-family: "Poppins", sans-serif;
+    font-size: 13px;
 }
