--- a/src/Components/eventStyle.css
+++ b/src/Components/eventStyle.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+.event-button-button {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+
 .event-table {
     background-color: transparent;
 }
@@ -60,11 +67,28 @@
     border: 2px solid rgb(225, 225, 225);
 }
 .category-button-event {
-    margin-top: 10px;
-    width: 100%;
-    height: 35px;
+    width: 100px;
+    height: 50px;
     background-color: #039660;
     border: none;
     font-family: "Poppins", sans-serif;
     font-size: 13px;
+}
+.create-event-button{
+    width: 100px;
+    height: 50px;
+    background-color: #039660;
+    border: none;
+    font-family: "Poppins", sans-serif;
+    font-size: 13px;
+}
+.event-save-button{
+    display: flex;
+    justify-content: end;
+    margin-top: 10px;
+}
+.save-event-button{
+    display: flex;
+    justify-content: end;
+    margin-top: 10px;
 }
